[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/UIMain.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Settings.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/GameMenu.gd" type="Script" id=3]

[node name="GameMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UIMain" parent="." instance=ExtResource( 1 )]

[node name="Settings" parent="." instance=ExtResource( 2 )]
[connection signal="read_sound" from="." to="Settings" method="_on_GameMenu_read_sound"]
[connection signal="play_pressed" from="UIMain" to="." method="_on_UIMain_play_pressed"]
[connection signal="settings_pressed" from="UIMain" to="." method="_on_UIMain_settings_pressed"]
[connection signal="back_button" from="Settings" to="." method="_on_Settings_back_button"]
[connection signal="sound_change" from="Settings" to="." method="_on_Settings_sound_change"]
